# SmallFramework

./: .gitignore  README.md  SmallFramework.sln
SmallFramework/: CMakeLists.txt  Game.cpp  Game.h  GameStateManager.cpp  Model.cpp  Model.h  Plane.cpp  Plane.h  Platform.cpp  Platform.h  Shader.cpp  Shader.h  SmallFramework.cpp  SmallFramework.filters  SmallFramework.vcxproj  SmallFramework.vcxproj.filters  Texture.h
SmallFramework/assets/shaders/: ADSL.frag  ADSL.vert  DistanceColor.frag  DistanceColor.vert  OneColor.frag  SimpleFrag.frag  SimpleVertex.vert
SmallFramework/include/: Box.h  Camera.h  Game.h  GameState.h  GameStateManager.h  Model.h  Plane.h  Shader.h  Texture.h  Transform.h
SmallFramework/src/: Box.cpp  Camera.cpp  Game.cpp  GameStateManager.cpp  Model.cpp  Plane.cpp  Platform.cpp  Shader.cpp  SmallFramework.cpp  Texture.cpp  Transform.cpp
SmallFramework/x64/Debug/: SmallFramework.exe.recipe  SmallFramework.ilk  vc142.idb
SmallFramework/x64/Debug/SmallFramework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SmallFramework.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
